<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditBusDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_informasibus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/informasi_bus"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_namabus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_bus"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_informasibus"
            android:layout_margin="16dp"/>

        <EditText
            android:id="@+id/nama_bus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Nama Bus"
            android:hint="@string/nama_bus"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="@id/tv_namabus"
            app:layout_constraintStart_toEndOf="@id/glinetambah"
            app:layout_constraintTop_toTopOf="@id/tv_namabus" />

        <TextView
            android:id="@+id/tv_lokasiawal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lokasi_awal"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_namabus"
            android:layout_margin="16dp"/>

        <EditText
            android:id="@+id/lokasi_awal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Lokasi Awal"
            android:hint="@string/lokasi_awal"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="@id/tv_lokasiawal"
            app:layout_constraintStart_toEndOf="@id/glinetambah"
            app:layout_constraintTop_toTopOf="@id/tv_lokasiawal" />

        <TextView
            android:id="@+id/tv_lokasitujuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lokasi_tujuan"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_lokasiawal"
            android:layout_margin="16dp"/>

        <EditText
            android:id="@+id/lokasi_tujuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Lokasi Tujuan"
            android:hint="@string/lokasi_tujuan"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="@id/tv_lokasitujuan"
            app:layout_constraintStart_toEndOf="@id/glinetambah"
            app:layout_constraintTop_toTopOf="@id/tv_lokasitujuan" />

        <TextView
            android:id="@+id/tv_kapasitasbus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kapasitas_bus"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_lokasitujuan"
            android:layout_margin="16dp"/>

        <EditText
            android:id="@+id/kapasitas_bus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Kapasitas Bus"
            android:hint="@string/kapasitas_bus"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_kapasitasbus"
            app:layout_constraintStart_toEndOf="@id/glinetambah"
            app:layout_constraintTop_toTopOf="@id/tv_kapasitasbus"
            app:layout_constraintVertical_bias="0.615" />

        <TextView
            android:id="@+id/tv_kapasitasmaks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kapasitas_bus_maksimal"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_kapasitasbus"
            android:layout_margin="16dp"/>

        <EditText
            android:id="@+id/kapasitas_maks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Kapasitas Bus"
            android:hint="@string/kapasitas_bus_maksimal"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_kapasitasmaks"
            app:layout_constraintStart_toEndOf="@id/glinetambah"
            app:layout_constraintTop_toTopOf="@id/tv_kapasitasmaks"
            app:layout_constraintVertical_bias="0.615" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glinetambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="200dp" />

        <Button
            android:id="@+id/simpan_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/simpan_data_bus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_kapasitasmaks" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>